<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Darxen</string>
    <string name="refresh">Refresh</string>
    <string name="location_required">You need location services to use this app</string>
    <string name="location_services_message">You need wireless network location services to be enabled to use this app</string>
    <string name="location_services_title">Enable location services</string>
    <string name="do_it">Do it</string>
    <string name="quit">Quit</string>
    <string name="frame_first">First Frame</string>
    <string name="frame_previous">Previous Frame</string>
    <string name="frame_play_pause">Play/Pause</string>
    <string name="frame_next">Next Frame</string>
    <string name="frame_last">Last Frame</string>
    <string name="preferences">Preferences</string>
    <string name="unsupported_shapefile">Not supported with current Android version</string>
    <string name="status_wait_location">Waiting for location&#8230;</string>
    <string name="status_wait_site">Waiting for radar site&#8230;</string>
    <string name="dialog_title_pick_site">Pick a radar site</string>

</resources>